agustingmuzak@gmail.com

--- a/HTML/Deftones.html
+++ b/HTML/Deftones.html
@@ -2,42 +2,11 @@
 
 <html> 
 <head>
+    <link href="Deftones.css" rel="stylesheet">
     <title>Deftones!</title>
-        <style> #PageBody{
-                background-color: black;
-                }
-                #BriefHistory{
-                margin-right: 50em;
-                color: antiquewhite;
-                }
-                #Title{
-                color: rgb(6, 108, 243);    
-                }
-                #BriefHistoryTitle{
-                color: antiquewhite;    
-                }
-                #BandMembers{
-                color: antiquewhite    
-                }
-                #Chino{
-                color: rgb(6, 108, 243);    
-                }
-                #Stephen{
-                color: rgb(6, 108, 243);    
-                }
-                #Abe{
-                color: rgb(6, 108, 243);    
-                }
-                #Chi{
-                color: rgb(6, 108, 243);    
-                }
-                #Frank{
-                color: rgb(6, 108, 243);    
-                }
-                p {color: rgb(235, 216, 192);}
-            </style> 
 </head>
 <body id="PageBody">
+<div class="bg-gradient"></div>
 <h1 id="Title">Deftones</h1>
 <h2 id="BriefHistoryTitle"> Brief history of Deftones</h2>
     <p style="text-align:left" id="BriefHistory">Deftones is an American alternative metal band formed in Sacramento, California in 1988. 
@@ -53,9 +22,15 @@
         <p>This is Stephen Carpenter! He's your average retarded stoner, however with only 3 working neurons he managed to make some of the best songs ever! <b>Impressive!</b></p>
             <img src="./Deftones images/Stephen-Carpenter.jpg" alt="He smokes so much! He might develop a lung disease!" height="200" width="200">
     <h3 id="Abe">Abe Cunningham</h3>
+        <p>Probably the best metal drummer ever? He beats the shit outta his drums and is pretty lowkey, need I say more?</p>
+            <img src="./Deftones images/Abe-Cunningham.jpg" alt="Look at the hate in his eyes when he looks at the drums!" height="200" width="200">
     <h3 id="Chi">Chi Cheng</h3>
+        <p>The coolest member of Deftones by far, but also the worst driver in the band...</p>
+            <img src="./Deftones images/Chi-Cheng.jpg" alt="Just look at him, isn't he so cool?" height="200" width="200">
     <h3 id="Frank">Frank Delgado</h3>
- 
-
+        <p>Nobody has a single clue what he does, but we all know he's essential, I guess Chino got him in the band to outweigh the rest racially? Latinx power I guess...</p>
+            <img src="./Deftones images/Frank-Delgado.jpg" alt="Even the way he looks at you is ambient" height="200" width="200">
+<h2 id="Song">But, wait a minute? Can you show us one of their songs?</h2>
+<h3 id="OfCourse">Sure! Check this out...</h3>
 </body>
 </html>
