--- a/HTML/Dasmoto-art project/Dasmoto.html
+++ b/HTML/Dasmoto-art project/Dasmoto.html
@@ -11,22 +11,22 @@
             <h1>Dasmoto's Arts &amp Crafts</h1>
         </div>
         <div class="Brushes">
-            <h2>Brushes</h2>
+            <h2 id="BrushesTitle">Brushes</h2>
             <img src="./Resources/hacksaw.jpeg">
             <h3>Hacksaw Brushes</h3>
-            <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. Starting at $3.00 / brush.</p>
+            <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. <mark id="AvailableBrushes">Available in different sizes. Starting at $3.00 / brush.</mark></p>
         </div>
         <div class="Frames">
-            <h2>Frames</h2>
+            <h2 id="FramesTitle">Frames</h2>
             <img src="./Resources/frames.jpeg">
             <h3>Art Frames (assorted)</h3>
-            <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. Starting at $2.00 / frame.</p>
+            <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <mark id="StartingFrames">Starting at $2.00 / frame.</mark></p>
         </div>
         <div class="Paint">
-            <h2>Paint</h2>
+            <h2 id="PaintTitle">Paint</h2>
             <img src="./Resources/finnish.jpeg">
             <h3>Clean Finnish Paint</h3>
-            <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. Starting at $5.00 / tube. </p>
+            <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <mark id="StartingPaint">Starting at $5.00 / tube.</mark></p>
         </div>
 
     </body>
